--- a/charts/service-a/templates/deployment.yaml
+++ b/charts/service-a/templates/deployment.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
         - name: service-a
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          #image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}@{{ .Values.image.digest | default (printf \":%s\" .Values.image.tag) }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.containerPort }}
